force-app/main/default/objects/PricebookEntry/fields/ConsumerPrice__c.field-meta.xml
<CustomField>
    <fullName>ConsumerPrice__c</fullName>
    <formula>Price__r.ConsumerPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Consumer Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>