force-app/main/default/objects/PricebookEntry/fields/EdtionType__c.field-meta.xml
<CustomField>
    <fullName>EdtionType__c</fullName>
    <formula>Product2.EditionType__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edition type</label>
    <type>Text</type>
</CustomField>