force-app/main/default/objects/PricebookEntry/fields/FollowUpPricebookEntryID__c.field-meta.xml
<CustomField>
    <fullName>FollowUpPricebookEntryID__c</fullName>
    <description>As we cannot do Pricebookentry lookups to Pricebookentry objects, we have a field for the id.</description>
    <label>Follow Up Pricebook Entry ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>