force-app/main/default/objects/PricebookEntry/fields/HasFollowUpPriceBookEntry__c.field-meta.xml
<CustomField>
    <fullName>HasFollowUpPriceBookEntry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator to link to next Pricebook Entry (like a new pricebook entry for a new year or season)</description>
    <label>Has Follow Up PriceBook Entry</label>
    <type>Checkbox</type>
</CustomField>