force-app/main/default/objects/PricebookEntry/fields/ListPriceDiscountType__c.field-meta.xml
<CustomField>
    <fullName>ListPriceDiscountType__c</fullName>
    <label>List Price Discount Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ListPriceDiscountType</valueSetName>
    </valueSet>
</CustomField>