force-app/main/default/objects/PricebookEntry/fields/PackageType__c.field-meta.xml
<CustomField>
    <fullName>PackageType__c</fullName>
    <formula>Text(Product2.PackageType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package type</label>
    <type>Text</type>
</CustomField>