force-app/main/default/objects/PricebookEntry/fields/Price__c.field-meta.xml
<CustomField>
    <fullName>Price__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Price</label>
    <referenceTo>Pricing__c</referenceTo>
    <relationshipLabel>Price Book Entries</relationshipLabel>
    <relationshipName>Price_Book_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>