force-app/main/default/objects/PricebookEntry/fields/ProductDeliveryStatus__c.field-meta.xml
<CustomField>
    <fullName>ProductDeliveryStatus__c</fullName>
    <formula>TEXT(Product2.DeliveryStatus__c)</formula>
    <label>Product Delivery Status</label>
    <type>Text</type>
</CustomField>