force-app/main/default/objects/PricebookEntry/fields/Rate1from__c.field-meta.xml
<CustomField>
    <fullName>Rate1from__c</fullName>
    <label>Rate 1 from</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>