force-app/main/default/objects/PricebookEntry/fields/rate1Price__c.field-meta.xml
<CustomField>
    <fullName>rate1Price__c</fullName>
    <description>Price of rate 1 scale</description>
    <label>Rate 1 price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>