force-app/main/default/objects/PricebookEntry/fields/Rate1to__c.field-meta.xml
<CustomField>
    <fullName>Rate1to__c</fullName>
    <label>Rate 1 to</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>