force-app/main/default/objects/PricebookEntry/fields/Rate1UXCalculation__c.field-meta.xml
<CustomField>
    <fullName>Rate1UXCalculation__c</fullName>
    <formula>&quot;€&quot; &amp;text( rate1Price__c) &amp;&quot; for ordering quantities between &quot; &amp;text(Rate1from__c) &amp;&quot; and &quot; &amp;text(Rate1to__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate 1</label>
    <type>Text</type>
</CustomField>