force-app/main/default/objects/PricebookEntry/fields/rate2Price__c.field-meta.xml
<CustomField>
    <fullName>rate2Price__c</fullName>
    <label>Rate  2 price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>