force-app/main/default/objects/PricebookEntry/fields/Rate2to__c.field-meta.xml
<CustomField>
    <fullName>Rate2to__c</fullName>
    <label>Rate 2 to</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>