force-app/main/default/objects/PricebookEntry/fields/Rate2UXCalculated__c.field-meta.xml
<CustomField>
    <fullName>Rate2UXCalculated__c</fullName>
    <formula>&quot;€&quot; &amp;text( rate2Price__c) &amp;&quot; for ordering quantities between &quot; &amp;text(Rate2from__c) &amp;&quot; and &quot; &amp;text(Rate2to__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rate 2</label>
    <type>Text</type>
</CustomField>